syntax = "proto3";
message FeatureResponse {
    message Feature {
        enum ValueType {
            BOOLEAN = 0;
            STRING = 1;
            NUMERIC = 2;
          }
          ValueType valueType = 1;
        oneof value {
            bool booleanValue = 2;
            string stringValue = 3;
            int32 numericValue = 4;
        }
        
      }
    map<string, Feature> feature_map = 1;
}